--- a/.env
+++ b/.env
@@ -2,31 +2,49 @@ COMPOSE_PROJECT_NAME=woori-card-scope
 
 NGINX_PORT=80
 
-# ── MySQL 인증 (팀원 구현 완료 후 값 채우기) ──
-MYSQL_ROOT_PASSWORD=root1234
-MYSQL_REPL_PASSWORD=repl1234
+# ─────────────────────────────────────────
+# MySQL Root / Cluster
+# ─────────────────────────────────────────
+MYSQL_ROOT_PASSWORD=1234
 
+# ─────────────────────────────────────────
+# Application DB
+# ─────────────────────────────────────────
 APP_DB_NAME=card_db
-APP_DB_USER=app
-APP_DB_PASSWORD=app1234
+APP_DB_USER=root
+APP_DB_PASSWORD=1234
 
-# ── DB Source 연결 (팀원 구현 후 값 채우기) ──
-DB_SOURCE_HOST=
-DB_SOURCE_PORT=3306
-DB_SOURCE_USER=
-DB_SOURCE_PASSWORD=
+# 읽기 전용 계정 - secondaty node
+APP_DB_RO_USER=root
+APP_DB_RO_PASSWORD=1234
 
-# ── DB Replica 연결 (팀원 구현 후 값 채우기) ──
-DB_REPLICA_HOST=
-DB_REPLICA_PORT=3306
-DB_REPLICA_USER=
-DB_REPLICA_PASSWORD=
+# ─────────────────────────────────────────
+# DB Router 연결 정보
+# ─────────────────────────────────────────
 
-# ── Pool tuning ──
+# Write (Primary 자동 연결)
+DB_SOURCE_HOST=mysql-router
+DB_SOURCE_PORT=6446
+DB_SOURCE_USER=root
+DB_SOURCE_PASSWORD=1234
+
+# Read (Secondary 자동 분산)
+DB_REPLICA_HOST=mysql-router
+DB_REPLICA_PORT=6447
+DB_REPLICA_USER=root
+DB_REPLICA_PASSWORD=1234
+
+# ─────────────────────────────────────────
+# Pool tuning
+# ─────────────────────────────────────────
 DB_SOURCE_MAX_POOL_SIZE=10
+DB_SOURCE_MIN_IDLE=2
 DB_REPLICA_MAX_POOL_SIZE=10
+DB_REPLICA_MIN_IDLE=2
 
-# ── Log tuning ──
+# ─────────────────────────────────────────
+# Log tuning
+# ─────────────────────────────────────────
 LOG_LEVEL=INFO
 LOG_MAX_FILE_SIZE=20MB
 LOG_MAX_HISTORY_DAYS=14
