--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - was1
       - was2
     volumes:
-      - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./docker/nginx.conf:/etc/nginx/nginx.conf:ro
     networks:
       - app-net
     restart: unless-stopped
@@ -21,7 +21,7 @@ services:
   # ─────────────────────────────────────────────────────────────
   was1:
     build:
-      context: ./sample-project
+      context: .
       dockerfile: Dockerfile
     container_name: ${COMPOSE_PROJECT_NAME}-was1
     environment:
@@ -64,7 +64,7 @@ services:
   # ─────────────────────────────────────────────────────────────
   was2:
     build:
-      context: ./sample-project
+      context: .
       dockerfile: Dockerfile
     container_name: ${COMPOSE_PROJECT_NAME}-was2
     environment:
