--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -10,6 +10,10 @@ http {
     server {
         listen 80;
         server_name _;
+        
+        location /status {
+        	stub_status on;
+    	}
 
         location / {
             proxy_pass http://tomcat_cluster;
