edit my.cnf and docker-compose.yml

--- a/.env
+++ b/.env
@@ -11,12 +11,12 @@ MYSQL_ROOT_PASSWORD=1234
 # Application DB
 # ─────────────────────────────────────────
 APP_DB_NAME=card_db
-APP_DB_USER=root
-APP_DB_PASSWORD=1234
+APP_DB_USER=app
+APP_DB_PASSWORD=app1234
 
 # 읽기 전용 계정 - secondaty node
-APP_DB_RO_USER=root
-APP_DB_RO_PASSWORD=1234
+APP_DB_RO_USER=app_ro
+APP_DB_RO_PASSWORD=app_ro_pw
 
 # ─────────────────────────────────────────
 # DB Router 연결 정보
@@ -25,14 +25,14 @@ APP_DB_RO_PASSWORD=1234
 # Write (Primary 자동 연결)
 DB_SOURCE_HOST=mysql-router
 DB_SOURCE_PORT=6446
-DB_SOURCE_USER=root
-DB_SOURCE_PASSWORD=1234
+DB_SOURCE_USER=app
+DB_SOURCE_PASSWORD=app1234
 
 # Read (Secondary 자동 분산)
 DB_REPLICA_HOST=mysql-router
 DB_REPLICA_PORT=6447
-DB_REPLICA_USER=root
-DB_REPLICA_PASSWORD=1234
+DB_REPLICA_USER=app_ro
+DB_REPLICA_PASSWORD=app_ro_pw
 
 # ─────────────────────────────────────────
 # Pool tuning
