--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,15 @@
+version: "3.8"
+
 services:
-  # ─────────────────────────────────────────────────────────────
-  # Nginx (Reverse Proxy / Load Balancer)
-  # ─────────────────────────────────────────────────────────────
+
+  # ─────────────────────────────────────────
+  # Nginx
+  # ─────────────────────────────────────────
   nginx:
     image: nginx:1.27-alpine
     container_name: ${COMPOSE_PROJECT_NAME}-nginx
     ports:
-      - "${NGINX_PORT:-80}:80"
+      - "80:80"
     depends_on:
       - was1
       - was2
@@ -16,95 +19,74 @@ services:
       - app-net
     restart: unless-stopped
 
-  # ─────────────────────────────────────────────────────────────
-  # WAS #1 (Tomcat)
-  # ─────────────────────────────────────────────────────────────
+
+  # ─────────────────────────────────────────
+  # WAS 1
+  # ─────────────────────────────────────────
   was1:
     build:
       context: .
       dockerfile: Dockerfile
     container_name: ${COMPOSE_PROJECT_NAME}-was1
-    environment:
-      APP_NAME: sample-project
-      LOG_DIR: /usr/local/tomcat/logs
-
-      # DB (Router 기반)
-      DB_NAME: ${APP_DB_NAME}
-      DB_SOURCE_HOST: ${DB_SOURCE_HOST:-mysql-router}
-      DB_SOURCE_PORT: ${DB_SOURCE_PORT:-6446}
-      DB_SOURCE_USER: ${DB_SOURCE_USER:-${APP_DB_USER}}
-      DB_SOURCE_PASSWORD: ${DB_SOURCE_PASSWORD:-${APP_DB_PASSWORD}}
-
-      DB_REPLICA_HOST: ${DB_REPLICA_HOST:-mysql-router}
-      DB_REPLICA_PORT: ${DB_REPLICA_PORT:-6447}
-      DB_REPLICA_USER: ${DB_REPLICA_USER:-${APP_DB_RO_USER:-app_ro}}
-      DB_REPLICA_PASSWORD: ${DB_REPLICA_PASSWORD:-${APP_DB_RO_PASSWORD:-app_ro_pw}}
-
-      DB_SOURCE_MAX_POOL_SIZE: ${DB_SOURCE_MAX_POOL_SIZE:-10}
-      DB_SOURCE_MIN_IDLE: ${DB_SOURCE_MIN_IDLE:-2}
-      DB_REPLICA_MAX_POOL_SIZE: ${DB_REPLICA_MAX_POOL_SIZE:-10}
-      DB_REPLICA_MIN_IDLE: ${DB_REPLICA_MIN_IDLE:-2}
-
-      DB_PARAMS: ${DB_PARAMS:-serverTimezone=Asia/Seoul&characterEncoding=UTF-8&useSSL=false&allowPublicKeyRetrieval=true}
-
-      LOG_LEVEL: ${LOG_LEVEL:-INFO}
-      LOG_MAX_FILE_SIZE: ${LOG_MAX_FILE_SIZE:-20MB}
-      LOG_MAX_HISTORY_DAYS: ${LOG_MAX_HISTORY_DAYS:-14}
-      LOG_TOTAL_SIZE_CAP: ${LOG_TOTAL_SIZE_CAP:-2GB}
     ports:
       - "8080:8080"
+    environment:
+      DB_NAME: ${APP_DB_NAME}
+
+      # Router RW
+      DB_SOURCE_HOST: mysql-router
+      DB_SOURCE_PORT: 6446
+      DB_SOURCE_USER: ${APP_DB_USER}
+      DB_SOURCE_PASSWORD: ${APP_DB_PASSWORD}
+
+      # Router RO
+      DB_REPLICA_HOST: mysql-router
+      DB_REPLICA_PORT: 6447
+      DB_REPLICA_USER: ${APP_DB_RO_USER}
+      DB_REPLICA_PASSWORD: ${APP_DB_RO_PASSWORD}
+
+      DB_PARAMS: serverTimezone=Asia/Seoul&characterEncoding=UTF-8&useSSL=false&allowPublicKeyRetrieval=true
     depends_on:
       - mysql-router
     networks:
       - app-net
     restart: unless-stopped
 
-  # ─────────────────────────────────────────────────────────────
-  # WAS #2 (Tomcat)
-  # ─────────────────────────────────────────────────────────────
+
+  # ─────────────────────────────────────────
+  # WAS 2
+  # ─────────────────────────────────────────
   was2:
     build:
       context: .
       dockerfile: Dockerfile
     container_name: ${COMPOSE_PROJECT_NAME}-was2
-    environment:
-      APP_NAME: sample-project
-      LOG_DIR: /usr/local/tomcat/logs
-
-      # DB (Router 기반)
-      DB_NAME: ${APP_DB_NAME}
-      DB_SOURCE_HOST: ${DB_SOURCE_HOST:-mysql-router}
-      DB_SOURCE_PORT: ${DB_SOURCE_PORT:-6446}
-      DB_SOURCE_USER: ${DB_SOURCE_USER:-${APP_DB_USER}}
-      DB_SOURCE_PASSWORD: ${DB_SOURCE_PASSWORD:-${APP_DB_PASSWORD}}
-
-      DB_REPLICA_HOST: ${DB_REPLICA_HOST:-mysql-router}
-      DB_REPLICA_PORT: ${DB_REPLICA_PORT:-6447}
-      DB_REPLICA_USER: ${DB_REPLICA_USER:-${APP_DB_RO_USER:-app_ro}}
-      DB_REPLICA_PASSWORD: ${DB_REPLICA_PASSWORD:-${APP_DB_RO_PASSWORD:-app_ro_pw}}
-
-      DB_SOURCE_MAX_POOL_SIZE: ${DB_SOURCE_MAX_POOL_SIZE:-10}
-      DB_SOURCE_MIN_IDLE: ${DB_SOURCE_MIN_IDLE:-2}
-      DB_REPLICA_MAX_POOL_SIZE: ${DB_REPLICA_MAX_POOL_SIZE:-10}
-      DB_REPLICA_MIN_IDLE: ${DB_REPLICA_MIN_IDLE:-2}
-
-      DB_PARAMS: ${DB_PARAMS:-serverTimezone=Asia/Seoul&characterEncoding=UTF-8&useSSL=false&allowPublicKeyRetrieval=true}
-
-      LOG_LEVEL: ${LOG_LEVEL:-INFO}
-      LOG_MAX_FILE_SIZE: ${LOG_MAX_FILE_SIZE:-20MB}
-      LOG_MAX_HISTORY_DAYS: ${LOG_MAX_HISTORY_DAYS:-14}
-      LOG_TOTAL_SIZE_CAP: ${LOG_TOTAL_SIZE_CAP:-2GB}
     ports:
       - "8090:8080"
+    environment:
+      DB_NAME: ${APP_DB_NAME}
+
+      DB_SOURCE_HOST: mysql-router
+      DB_SOURCE_PORT: 6446
+      DB_SOURCE_USER: ${APP_DB_USER}
+      DB_SOURCE_PASSWORD: ${APP_DB_PASSWORD}
+
+      DB_REPLICA_HOST: mysql-router
+      DB_REPLICA_PORT: 6447
+      DB_REPLICA_USER: ${APP_DB_RO_USER}
+      DB_REPLICA_PASSWORD: ${APP_DB_RO_PASSWORD}
+
+      DB_PARAMS: serverTimezone=Asia/Seoul&characterEncoding=UTF-8&useSSL=false&allowPublicKeyRetrieval=true
     depends_on:
       - mysql-router
     networks:
       - app-net
     restart: unless-stopped
 
-  # ─────────────────────────────────────────────────────────────
-  # MySQL InnoDB Cluster Nodes (4 nodes)
-  # ─────────────────────────────────────────────────────────────
+
+  # ─────────────────────────────────────────
+  # MySQL Node 1
+  # ─────────────────────────────────────────
   mysql1:
     image: mysql:8.0
     container_name: ${COMPOSE_PROJECT_NAME}-mysql1
@@ -113,11 +95,13 @@ services:
     volumes:
       - mysql1_data:/var/lib/mysql
       - ./docker/mysql/innodb/mysql1/my.cnf:/etc/mysql/conf.d/my.cnf:ro
-    ports:
-      - "33061:3306"
+    expose:
+      - "3306"
+      - "33061"     # Group Replication GCS
     networks:
       - app-net
     restart: unless-stopped
+
 
   mysql2:
     image: mysql:8.0
@@ -127,9 +111,13 @@ services:
     volumes:
       - mysql2_data:/var/lib/mysql
       - ./docker/mysql/innodb/mysql2/my.cnf:/etc/mysql/conf.d/my.cnf:ro
+    expose:
+      - "3306"
+      - "33061"
     networks:
       - app-net
     restart: unless-stopped
+
 
   mysql3:
     image: mysql:8.0
@@ -139,9 +127,13 @@ services:
     volumes:
       - mysql3_data:/var/lib/mysql
       - ./docker/mysql/innodb/mysql3/my.cnf:/etc/mysql/conf.d/my.cnf:ro
+    expose:
+      - "3306"
+      - "33061"
     networks:
       - app-net
     restart: unless-stopped
+
 
   mysql4:
     image: mysql:8.0
@@ -151,13 +143,17 @@ services:
     volumes:
       - mysql4_data:/var/lib/mysql
       - ./docker/mysql/innodb/mysql4/my.cnf:/etc/mysql/conf.d/my.cnf:ro
+    expose:
+      - "3306"
+      - "33061"
     networks:
       - app-net
     restart: unless-stopped
 
-  # ─────────────────────────────────────────────────────────────
-  # MySQL Shell (Cluster 구성용)
-  # ─────────────────────────────────────────────────────────────
+
+  # ─────────────────────────────────────────
+  # MySQL Shell
+  # ─────────────────────────────────────────
   mysqlsh:
     image: mysql/mysql-server:8.0
     container_name: ${COMPOSE_PROJECT_NAME}-mysqlsh
@@ -171,15 +167,13 @@ services:
       - app-net
     restart: unless-stopped
 
-  # ─────────────────────────────────────────────────────────────
-  # MySQL Router (RW/RO endpoints)
-  #  - RW : 6446 (Primary)
-  #  - RO : 6447 (Secondaries)
-  # ─────────────────────────────────────────────────────────────
+
+  # ─────────────────────────────────────────
+  # MySQL Router
+  # ─────────────────────────────────────────
   mysql-router:
     image: mysql/mysql-router:8.0
     container_name: ${COMPOSE_PROJECT_NAME}-mysql-router
-    entrypoint: ["sleep", "infinity"]
     volumes:
       - mysqlrouter_data:/router
     ports:
@@ -187,16 +181,18 @@ services:
       - "6447:6447"
     depends_on:
       - mysql1
-      - mysql2
-      - mysql3
-      - mysql4
     networks:
       - app-net
     restart: unless-stopped
 
+    entrypoint: ["mysqlrouter"]
+    command: ["-c", "/router/mysqlrouter.conf"]
+
+
 networks:
   app-net:
     driver: bridge
+
 
 volumes:
   mysql1_data:
