--- a/docker/mysql/innodb/mysql1/my.cnf
+++ b/docker/mysql/innodb/mysql1/my.cnf
@@ -1,11 +1,29 @@
 [mysqld]
 server-id=1
 report_host=mysql1
+report_port=3306
 
 log-bin=mysql-bin
 binlog_format=ROW
 gtid_mode=ON
 enforce_gtid_consistency=ON
+log_slave_updates=ON
 
 transaction_write_set_extraction=XXHASH64
 binlog_checksum=NONE
+
+# --- Group Replication ---
+plugin_load_add=group_replication.so
+loose-group_replication_group_name="bc69b35a-12e6-11f1-add4-f6568b7482b2"
+loose-group_replication_local_address="mysql1:33061"
+loose-group_replication_group_seeds="mysql1:33061,mysql2:33061,mysql3:33061,mysql4:33061"
+loose-group_replication_start_on_boot=OFF
+loose-group_replication_single_primary_mode=ON
+loose-group_replication_enforce_update_everywhere_checks=OFF
+
+# 권장: 재시작/재조인 안정성
+loose-group_replication_exit_state_action=READ_ONLY
+loose-group_replication_bootstrap_group=OFF
+
+# --- InnoDB Cluster / Shell 권장 설정 ---
+super_read_only=OFF
