fix: router error

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,7 +81,7 @@ services:
 
 
   # ─────────────────────────────────────────
-  # MySQL Node 1 (bootstrap_group=ON)
+  # MySQL Node 1
   # ─────────────────────────────────────────
   mysql1:
     image: mysql:8.0
@@ -152,12 +152,25 @@ services:
 
 
   # ─────────────────────────────────────────
-  # MySQL Shell (Cluster 구성용)
+  # MySQL Shell (Cluster 자동 복구 + 수동 접속용)
+  #   - 기동 시 mysql1 ready 대기 후 reboot 시도
+  #   - 최초 초기화 시에는 Cluster가 없으므로 실패해도 무시
   # ─────────────────────────────────────────
   mysqlsh:
     image: mysql/mysql-server:8.0
     container_name: ${COMPOSE_PROJECT_NAME}-mysqlsh
-    entrypoint: ["sleep", "infinity"]
+    entrypoint:
+      - /bin/bash
+      - -c
+      - |
+        echo "[mysqlsh] Waiting for mysql1 to be ready..."
+        until mysqlsh root:1234@mysql1:3306 -e "print('ok')" 2>/dev/null; do
+          sleep 5
+        done
+        echo "[mysqlsh] Attempting cluster recovery..."
+        mysqlsh root:1234@mysql1:3306 -e "dba.rebootClusterFromCompleteOutage()" 2>/dev/null || true
+        echo "[mysqlsh] Done. Sleeping..."
+        sleep infinity
     depends_on:
       - mysql1
       - mysql2
@@ -171,7 +184,7 @@ services:
   # ─────────────────────────────────────────
   # MySQL Router
   #   - 설정 파일 없으면 대기 (최초 부트스트랩 전)
-  #   - 설정 파일 있으면 자동 시작
+  #   - 설정 파일 있으면 45초 대기 후 시작 (Cluster 복구 완료 대기)
   # ─────────────────────────────────────────
   mysql-router:
     image: mysql/mysql-router:8.0
@@ -186,7 +199,9 @@ services:
           echo "[router] Config not found. Waiting for bootstrap..."
           while [ ! -f "$$CONF" ]; do sleep 5; done
         fi
-        echo "[router] Config found. Starting mysqlrouter..."
+        echo "[router] Waiting for cluster to be ready..."
+        sleep 45
+        echo "[router] Starting mysqlrouter..."
         exec mysqlrouter -c "$$CONF"
     volumes:
       - mysqlrouter_data:/router
